--- a/dynamic_key_binding.css
+++ b/dynamic_key_binding.css
@@ -39,6 +39,10 @@ body {
     margin-top: 16px
 }
 
+.padding-bottom-tiny {
+    padding-bottom: 4px;
+}
+
 .text-center {
     text-align: center;
 }
