--- a/dynamic_key_binding.css
+++ b/dynamic_key_binding.css
@@ -1,69 +1,90 @@
 body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 .border-solid {
-    border-style: solid;
+  border-style: solid;
 }
 
 .border-width-normal {
-    border-width: 1px;
+  border-width: 1px;
+}
+
+.border-width-thick {
+    border-width: 2px;
 }
 
 .radius-small {
-    border-radius: 4px;
+  border-radius: 4px;
+}
+
+.no-outline {
+    outline: none;
 }
 
 .flexbox {
-    display: flex;
+  display: flex;
 }
 
 .flexbox-direction-column {
-    flex-direction: column;
+  flex-direction: column;
 }
 
 .flexbox-grow-1 {
-    flex-grow: 1;
+  flex-grow: 1;
 }
 
 .margin-smaller {
-    margin: 8px;
+  margin: 8px;
 }
 
 .margin-horizontal-smaller {
-    margin-left: 8px;
-    margin-right: 8px;
+  margin-left: 8px;
+  margin-right: 8px;
 }
 
 .margin-top-medium {
-    margin-top: 16px
+  margin-top: 16px;
+}
+
+.padding-tiny {
+  padding: 4px;
 }
 
 .padding-bottom-tiny {
-    padding-bottom: 4px;
+  padding-bottom: 4px;
 }
 
 .text-center {
-    text-align: center;
+  text-align: center;
 }
 
 .flexbox-centered {
-    align-items: center;
-    justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
 
 .shade-087 {
-    color: rgb(34, 34, 34) !important;
+  color: rgb(34, 34, 34) !important;
 }
 
 .font-weight-medium {
-    font-weight: 400;
+  font-weight: 400;
 }
 
 .line-height-medium {
-    line-height: 20px;
+  line-height: 20px;
 }
 
 .font-size-medium {
-    font-size: 16px
+  font-size: 16px;
+}
+
+.border-shade-087 {
+  border-color: rgb(221, 221, 221);
+}
+
+.border-primary {
+border-color: rgb(26, 115, 232);
 }
