--- a/dynamic_key_binding.css
+++ b/dynamic_key_binding.css
@@ -77,8 +77,16 @@ body {
   line-height: 20px;
 }
 
+.line-height-small {
+  line-height: 18px;
+}
+
 .font-size-medium {
   font-size: 16px;
+}
+
+.font-size-small {
+  font-size: 14px;
 }
 
 .border-shade-087 {
